cert-manager/deploy-prueba/1-test-certificates.yaml
# crear el namespace para aislar este deploy
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpd-prueba
# certificado de produccion para el namespace httpd-prueba
